--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "preview": "qwik build preview && vite preview --open",
-    "serve": "wrangler pages dev ./dist",
+    "serve": "npx wrangler pages dev ./dist",
     "start": "vite --open --mode ssr",
     "qwik": "qwik"
   },
